syntax = "proto3";
package base.types.gfspserver;

import "base/types/gfsperrors/error.proto";
import "base/types/gfsptask/task.proto";

option go_package = "github.com/bnb-chain/greenfield-storage-provider/base/types/gfspserver";

message GfSpQueryTasksRequest {
  string task_sub_key = 1;
}

message GfSpQueryTasksResponse {
  base.types.gfsperrors.GfSpError err = 1;
  repeated string task_info = 2;
}

message GfSpQueryBucketMigrateRequest {}

message GfSpBucketMigrate {
  string bucket_name = 1;
  uint64 bucket_id = 2;
  string migrate_status = 3;
  repeated GfSpMigrateGVG gvg_task = 4;
}

message GfSpMigrateGVG {
  uint32 dest_gvg_id = 1;
  uint64 last_migrated_object_id = 2;
  int32 status = 3;
  string swap_out_key = 4;
}

message GfSpQueryBucketMigrateResponse {
  base.types.gfsperrors.GfSpError err = 1;
  repeated GfSpBucketMigrate bucket_migrate_plan = 2;
}

message GfSpQuerySpExitRequest {}

message GfSpSPExit {
  SrcSPSwapOutPlan src_swap_out = 1;
  DestSPTaskRunner dest_runner = 2;
}

message DestSPTaskRunner {
  repeated SwapOutUnit swap_out = 1;
  repeated GfSpMigrateGVG gvg_task = 2;
}

message SwapOutUnit {
  bool isFamily = 1;
  bool isSecondary = 2;
  uint32 globalVirtualGroupFamilyId = 3;
  uint32 successorSpId = 4;
  int32 status = 5;
}

message SrcSPSwapOutPlan {
  repeated SwapOutUnit swap_out = 1;
}

message GfSpQuerySpExitResponse {
  base.types.gfsperrors.GfSpError err = 1;
  GfSpSPExit sp_exit = 2;
}

service GfSpQueryTaskService {
  rpc GfSpQueryTasks(GfSpQueryTasksRequest) returns (GfSpQueryTasksResponse) {}
  rpc GfSpQueryBucketMigrate(GfSpQueryBucketMigrateRequest) returns (GfSpQueryBucketMigrateResponse) {}
  rpc GfSpQuerySpExit(GfSpQuerySpExitRequest) returns (GfSpQuerySpExitResponse) {}
}
